# snake

./: .bazelrc  .gitignore  BUILD  Info.plist  MODULE.bazel
snake/: collision.cc  collision.h  config.h  events.cc  events.h  factories.cc  factories.h  game.cc  game.h  game_text.cc  game_text.h  main.cc  pickup.cc  pickup.h  snake.cc  snake.h  texture_manager.cc  texture_manager.h
snake/CF/: Resource.cc  Resource.h  String.cc  String.h
snake/components/: collider.h  pickup.h  segments.h  sprite.h  text.h  transform.h
snake/engine/: colour.cc  colour.h  vector_2.cc  vector_2.h
toolchain/: BUILD  cc_toolchain_config.bzl
