###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "snake",
    repo_name = "snake",
)

bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.26.0")
bazel_dep(name = "rules_python", version = "1.1.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "apple_support", version = "1.18.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_apple", version = "3.20.1")
# bazel_dep(name = "platforms", version = "0.0.11")
# register_toolchains(
#     "//toolchain:cc_toolchain_for_osx_arm"
# )
